--- a/output/pages/acerca.html
+++ b/output/pages/acerca.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-        <title>presxs - Archives</title>
+          <title>presxs - Acerca</title>
         <meta charset="utf-8" />
 
        <link rel="stylesheet" type="text/css" href="https://montoyamoraga.io/presxs/theme/css/style.css" />
+
+
 </head>
 
 <body id="index" class="home">
@@ -12,12 +14,13 @@
                 <h1><a href="https://montoyamoraga.io/presxs/">presxs <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="https://montoyamoraga.io/presxs/pages/acerca.html">Acerca</a></li>
+            <li class="active"><a href="https://montoyamoraga.io/presxs/pages/acerca.html">Acerca</a></li>
         </ul></nav><!-- /#menu -->
-<h1>Archives for presxs</h1>
+    <h1>Acerca</h1>
+    
 
-<dl>
-</dl>
+    <p>Acerca de esta web.</p>
+
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
