--- a/output/index.html
+++ b/output/index.html
@@ -13,6 +13,7 @@
         </header><!-- /#banner -->
         <nav id="menu"><ul>
             <li><a href="https://montoyamoraga.io/presxs/pages/acerca.html">Acerca</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content">
 <h2>All articles</h2>
