--- a/output/pages/contacto.html
+++ b/output/pages/contacto.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-        <title>presxs - Archives</title>
+          <title>presxs - Contacto</title>
         <meta charset="utf-8" />
 
        <link rel="stylesheet" type="text/css" href="https://montoyamoraga.io/presxs/theme/css/style.css" />
+
+
 </head>
 
 <body id="index" class="home">
@@ -13,12 +15,13 @@
         </header><!-- /#banner -->
         <nav id="menu"><ul>
             <li><a href="https://montoyamoraga.io/presxs/pages/acerca.html">Acerca</a></li>
-            <li><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
+            <li class="active"><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
-<h1>Archives for presxs</h1>
+    <h1>Contacto</h1>
+    
 
-<dl>
-</dl>
+    <p>Contacto de esta web.</p>
+
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
