--- a/output/pages/acerca.html
+++ b/output/pages/acerca.html
@@ -15,6 +15,7 @@
         </header><!-- /#banner -->
         <nav id="menu"><ul>
             <li class="active"><a href="https://montoyamoraga.io/presxs/pages/acerca.html">Acerca</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Acerca</h1>
     
