comentar all articles

--- a/output/index.html
+++ b/output/index.html
@@ -24,8 +24,9 @@
 <section id="content">
 <h2>All articles</h2>
 
-<ol id="post-list">
-</ol><!-- /#posts-list -->
+<!-- <ol id="post-list">
+</ol> -->
+<!-- /#posts-list -->
 </section><!-- /#content -->
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
