nueva compilacion sin articles

--- a/output/index.html
+++ b/output/index.html
@@ -22,7 +22,9 @@
             <li><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content">
-<h2>All articles</h2>
+
+<!-- <h2>All articles</h2>
+ -->
 
 <!-- <ol id="post-list">
 </ol> -->
