--- a/output/index.html
+++ b/output/index.html
@@ -22,12 +22,14 @@
             <li><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content">
+<h2>All articles</h2>
 
-<!-- <h2>All articles</h2>
- -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+<script src="sketch.js"></script>
 
 <!-- <ol id="post-list">
-</ol> -->
+ -->
+<!-- </ol> -->
 <!-- /#posts-list -->
 </section><!-- /#content -->
         <footer id="contentinfo" class="body">
