compilar sin all articles

--- a/output/index.html
+++ b/output/index.html
@@ -22,7 +22,7 @@
             <li><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content">
-<h2>All articles</h2>
+<!-- <h2>All articles</h2> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 <script src="sketch.js"></script>
