--- a/output/categories.html
+++ b/output/categories.html
@@ -18,8 +18,7 @@
                 <h1><a href="https://montoyamoraga.io/presxs/">presxs</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="https://montoyamoraga.io/presxs/pages/acerca.html">Acerca</a></li>
-            <li><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
+            <li><a href="{slug}/acerca.html">Acerca</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Categories on presxs</h1>
     <ul>
