--- a/output/contacto.html
+++ b/output/contacto.html
@@ -20,8 +20,7 @@
                 <h1><a href="https://montoyamoraga.io/presxs/">presxs</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="https://montoyamoraga.io/presxs/pages/acerca.html">Acerca</a></li>
-            <li class="active"><a href="https://montoyamoraga.io/presxs/pages/contacto.html">Contacto</a></li>
+            <li><a href="{slug}/acerca.html">Acerca</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Contacto</h1>
     
