nuevo menu y testimonios

--- a/output/contacto.html
+++ b/output/contacto.html
@@ -20,12 +20,14 @@
                 <h1><a href="https://montoyamoraga.io/presxs/">presxs</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="{slug}/acerca.html">Acerca</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Contacto</h1>
     
 
-    <p>Contacto de esta web.</p>
+    <p>Contacto de esta web</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
