--- a/output/authors.html
+++ b/output/authors.html
@@ -18,7 +18,9 @@
                 <h1><a href="https://montoyamoraga.io/presxs/">presxs</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="{slug}/acerca.html">Acerca</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Authors on presxs</h1>
     <ul>
