--- a/output/404.html
+++ b/output/404.html
@@ -27,7 +27,7 @@
     <h1>Error 404</h1>
     
 
-    <p>Error 404</p>
+    <p>Esta página no existe</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
