--- a/output/acerca.html
+++ b/output/acerca.html
@@ -23,6 +23,7 @@
             <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
             <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/category/testimonio.html">testimonio</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Acerca</h1>
     
