--- a/output/categories.html
+++ b/output/categories.html
@@ -21,9 +21,11 @@
             <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
             <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/category/testimonio.html">testimonio</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Categories on presxs</h1>
     <ul>
+        <li><a href="https://montoyamoraga.io/presxs/category/testimonio.html">testimonio</a> (3)</li>
     </ul>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
