borrar categoria de persoas

--- a/output/404.html
+++ b/output/404.html
@@ -23,7 +23,7 @@
             <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
             <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
-            <li><a href="https://montoyamoraga.io/presxs/category/testimonio.html">testimonio</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/category/testimonios.html">testimonios</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Error 404</h1>
     
