--- a/output/index.html
+++ b/output/index.html
@@ -21,7 +21,7 @@
             <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
             <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
-            <li><a href="https://montoyamoraga.io/presxs/category/testimonio.html">testimonio</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/category/testimonios.html">testimonios</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content">
 <!-- <h2>All articles</h2> -->
