--- a/output/persona2.html
+++ b/output/persona2.html
@@ -26,7 +26,7 @@
             <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
             <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
-            <li class="active"><a href="https://montoyamoraga.io/presxs/category/testimonio.html">testimonio</a></li>
+            <li class="active"><a href="https://montoyamoraga.io/presxs/category/testimonios.html">testimonios</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content" class="body">
   <header>
