nuevo intento de category

--- a/output/categories.html
+++ b/output/categories.html
@@ -18,10 +18,9 @@
                 <h1><a href="https://montoyamoraga.io/presxs/">presxs</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/category/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
-            <li><a href="https://montoyamoraga.io/presxs/category/testimonios.html">testimonios</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Categories on presxs</h1>
     <ul>
