--- a/output/persona3.html
+++ b/output/persona3.html
@@ -23,10 +23,9 @@
                 <h1><a href="https://montoyamoraga.io/presxs/">presxs</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="https://montoyamoraga.io/presxs/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/acerca.html">Acerca</a></li>
+            <li><a href="https://montoyamoraga.io/presxs/category/testimonios.html">Testimonios</a></li>
             <li><a href="https://montoyamoraga.io/presxs/contacto.html">Contacto</a></li>
-            <li class="active"><a href="https://montoyamoraga.io/presxs/category/testimonios.html">testimonios</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content" class="body">
   <header>
