publicar nueva version con footer

--- a/output/tags.html
+++ b/output/tags.html
@@ -29,7 +29,7 @@
     </ul>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                este es el footer de la web
+                  © Todos los derechos reservados 18-O Archivo de prisión política de la revuelta en Chile.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 </body>
