--- a/output/archives.html
+++ b/output/archives.html
@@ -36,7 +36,7 @@
 </dl>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                este es el footer de la web
+                  © Todos los derechos reservados 18-O Archivo de prisión política de la revuelta en Chile.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 </body>
