--- a/output/nosotres.html
+++ b/output/nosotres.html
@@ -34,11 +34,10 @@
 <p>Sus integrantes son: Valentina Cortese Lastra  (fotoperiodista), Amanda Tapia Levi (fotógrafa y audiovisual), Andrea Valderrama Yevilao (estudiante de periodismo y fotógrafa) y Camila Pérez Soto (estudiante de periodismo y fotógrafa).</p>
 <p>Proyectos y plataformas aliadas:</p>
 <p>(Aquí irían los logos de esas plataformas)</p>
-<p>© Todos los derechos reservados 18-O Archivo de prisión política de la revuelta en Chile.</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                este es el footer de la web
+                  © Todos los derechos reservados 18-O Archivo de prisión política de la revuelta en Chile.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 </body>
