--- a/output/persona2.html
+++ b/output/persona2.html
@@ -45,7 +45,7 @@
 </section>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                este es el footer de la web
+                  © Todos los derechos reservados 18-O Archivo de prisión política de la revuelta en Chile.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 </body>
