--- a/output/index.html
+++ b/output/index.html
@@ -25,9 +25,11 @@
             <li><a href="./contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content">
-<!-- <h2>All articles</h2> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 <script src="sketch.js"></script>
+<!-- <h2>All articles</h2> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script> -->
+<!-- <script src="sketch.js"></script> -->
 
 <!-- <ol id="post-list">
         <li><article class="hentry">
