agregar nuevo compile

--- a/output/index.html
+++ b/output/index.html
@@ -27,9 +27,7 @@
 <section id="content">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 <script src="sketch.js"></script>
-<!-- <h2>All articles</h2> -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script> -->
-<!-- <script src="sketch.js"></script> -->
+<!-- <h2>All articles</h2> -->s
 
 <!-- <ol id="post-list">
         <li><article class="hentry">
