--- a/output/index.html
+++ b/output/index.html
@@ -27,7 +27,7 @@
 <section id="content">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 <script src="sketch.js"></script>
-<!-- <h2>All articles</h2> -->s
+<!-- <h2>All articles</h2> -->
 
 <!-- <ol id="post-list">
         <li><article class="hentry">
