--- a/output/archives.html
+++ b/output/archives.html
@@ -27,8 +27,8 @@
 <h1>Archives for presxs</h1>
 
 <dl>
-    <dt>Fri 19 June 2020</dt>
-    <dd><a href="./persona1.html">persona1</a></dd>
+    <dt>Thu 06 August 2020</dt>
+    <dd><a href="./esteban-bustos.html">esteban-bustos</a></dd>
     <dt>Fri 19 June 2020</dt>
     <dd><a href="./persona2.html">persona2</a></dd>
     <dt>Fri 19 June 2020</dt>
