nueva compilacion pelican

--- a/output/archives.html
+++ b/output/archives.html
@@ -28,7 +28,7 @@
 
 <dl>
     <dt>Thu 06 August 2020</dt>
-    <dd><a href="./esteban-bustos.html">esteban-bustos</a></dd>
+    <dd><a href="./esteban-bustos.html">Esteban Bustos</a></dd>
     <dt>Fri 19 June 2020</dt>
     <dd><a href="./persona2.html">persona2</a></dd>
     <dt>Fri 19 June 2020</dt>
