--- a/output/tags.html
+++ b/output/tags.html
@@ -22,6 +22,7 @@
             <li><a href="./acerca.html">Acerca</a></li>
             <li><a href="./nosotres.html">Nosotres</a></li>
             <li><a href="./category/testimonios.html">Testimonios</a></li>
+            <li><a href="./reflexiones.html">Reflexiones</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Tags for presxs</h1>
