--- a/output/categories.html
+++ b/output/categories.html
@@ -21,13 +21,13 @@
         <nav id="menu"><ul>
             <li><a href="./acerca.html">Acerca</a></li>
             <li><a href="./nosotres.html">Nosotres</a></li>
-            <li><a href="./testimonios.html">Testimonios</a></li>
+            <li><a href="./category/testimonios.html">Testimonios</a></li>
             <li><a href="./reflexiones.html">Reflexiones</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Categories on presxs</h1>
     <ul>
-        <li><a href="./category/testimonio.html">testimonio</a> (3)</li>
+        <li><a href="./category/testimonios.html">testimonios</a> (3)</li>
     </ul>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
