--- a/output/tags.html
+++ b/output/tags.html
@@ -21,7 +21,7 @@
         <nav id="menu"><ul>
             <li><a href="./acerca.html">Acerca</a></li>
             <li><a href="./nosotres.html">Nosotres</a></li>
-            <li><a href="./testimonios.html">Testimonios</a></li>
+            <li><a href="./category/testimonios.html">Testimonios</a></li>
             <li><a href="./reflexiones.html">Reflexiones</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul></nav><!-- /#menu -->
