nueva compilacion modificar testimonios

--- a/output/archives.html
+++ b/output/archives.html
@@ -30,10 +30,8 @@
 <dl>
     <dt>Thu 06 August 2020</dt>
     <dd><a href="./esteban-bustos.html">Esteban Bustos</a></dd>
-    <dt>Fri 19 June 2020</dt>
-    <dd><a href="./persona2.html">persona2</a></dd>
-    <dt>Fri 19 June 2020</dt>
-    <dd><a href="./persona3.html">persona3</a></dd>
+    <dt>Thu 06 August 2020</dt>
+    <dd><a href="./esteban-testing.html">Esteban Testing</a></dd>
 </dl>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
