--- a/output/reflexiones.html
+++ b/output/reflexiones.html
@@ -32,11 +32,11 @@
 <div>
   <ul>
     <div class = "reflexion">
-      <a href="https://archivodeprisionpolitica.io/manifestaciones.html"><img class="reflexionImagen" src="https://archivodeprisionpolitica.io/images/"></a>
+      <a href="https://archivodeprisionpolitica.io/manifestaciones.html"><img class="reflexionImagen" src="https://archivodeprisionpolitica.io/images/reflexiones/manifestaciones.jpg"></a>
       <a href="https://archivodeprisionpolitica.io/manifestaciones.html">Manifestaciones</a>
     </div>
     <div class = "reflexion">
-      <a href="https://archivodeprisionpolitica.io/prision-politica.html"><img class="reflexionImagen" src="https://archivodeprisionpolitica.io/images/"></a>
+      <a href="https://archivodeprisionpolitica.io/prision-politica.html"><img class="reflexionImagen" src="https://archivodeprisionpolitica.io/images/reflexiones/prision-politica.jpg"></a>
       <a href="https://archivodeprisionpolitica.io/prision-politica.html">Prisión política</a>
     </div>
     </ul>
